2017-03-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview, ftstring, ftgrid] Remove anti-aliasing toggle.

	* src/ftcommon.h (FTDemo_Handle): Replace `antialias' field with
	`LCD_MODE_MONO' enumerator.
	* src/ftcommon.c (FTDemo_Update_Current_Flags, FTDemo_Glyph_To_Bitmap,
	FTDemo_Index_To_Bitmap): Updated.
	* src/ftgrid.c (Process_Event, event_help, event_lcd_mode_change,
	event_lcd_filter_change): Ditto.
	* src/ftstring.c (Process_Event, event_help, event_lcdmode_change):
	Ditto.
	* src/ftview.c (Process_Event, event_help, write_header): Ditto.

2017-03-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftview.c (Render_*): Improve readability.

2017-03-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Consolidate emboldening and slanting modes.

	* src/ftview.c (Render_Slanted, Render_Embolden): Merged into...
	(Render_Fancy): ... this new function.
	(event_help, Process_Event, write_header, main): Updated.
	* src/ftview.1: Updated.

2017-03-23  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftmulti.c (Process_Event, main): Use `FT_RoundFix'.

2017-03-23  Werner Lemberg  <wl@gnu.org>

	* src/ftmulti.c (Process_Event, main): Fix rounding.

2017-03-23  Werner Lemberg  <wl@gnu.org>

	[ftmulti] Show PS name.

	* src/ftmulti.c (Render_All): Adjust vertical start position.
	(Render_Text): Make arguments similar to `Render_All'.
	Adjust vertical start position.
	(Process_Event): Round non-integer axis values to two decimal
	digits.
	(main): Updated.
	Print PostScript name.

2017-03-20  Brian Nixon  <nixonb@yahoo.com>

	[ftview] Improve waterfall mode (#50586).

	* src/ftview.c (Render_Waterfall): Stop repeating of the default
	glyph to the end of each line after the display text.

2017-03-20  Brian Nixon  <nixonb@yahoo.com>

	* graph/win32/grwin32.c(syskey_translators): Fix F10 key (#50585).

	`F10' does not work as advertised in the demos because the
	message-handling code expects it to arrive as a `normal' key but